--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,7 +1,8 @@
 #navContainer{
-	position: absolute;
-	left: 0;
+	position: relative;
 	top: 0;
+	left: 0;
+	display: block;
 	height: 10%;
 	width: 100%;
 	background-color: #00FF00;
