--- a/css/registration.css
+++ b/css/registration.css
@@ -1,53 +1,54 @@
 html,body{
-	height: 100%;
-	width: 100%;
+	width:100%;
+	height:100%;
 	overflow: hidden;
 }
 
+body{
+	background-color: #DCDCDC;
+}
 
 #container{
-	margin: auto;
-	background-color: white;
-	height: 75%;
-	width: 50%;
-	box-shadow: 2px 2px 2px 2px grey;
-	border-radius: 2%;
+	height:60%;
+	width:30%;
+	background-color: #ffffff;
+	margin:auto;
 }
 
 #topRow{
-	height: 20%;
-	width: 100%;
-}
-
-#loginBtn{
-	height: 100%;
-	width: 50%;
-	float: left;
+	width:100%;
+	height: 10%;
+	font-size: 20px;
 	text-align: center;
-	vertical-align: middle;
-	font-size: 2em;
-	border-top-left-radius: 2%;
-	border-top-right-radius:10%;
-	border-bottom-right-radius: 10%;
-}
-
-#signupBtn{
-	height: 100%;
-	width: 50%;
-	float: left;
-	background-color: #00FF00;
-	color: white;
-	text-align: center;
-	font-size: 2em;
-	border-top-right-radius: 2%;
-	border-top-left-radius: 10%;
-	border-bottom-left-radius: 10%;
 }
 
 #bottomRow{
-	height: 80%;
-	width: 100%;
+	padding: 20px;
 }
+
+#loginBtn, #signupBtn{
+	height: 100%;
+	width:50%;
+	float: left;
+}
+
+#signupBtn{
+	background-color: #ffffff;
+}
+
+#loginBtn{
+	background-color: #C0C0C0;
+}
+
+#loginForm, #signupForm{
+	width: 90%;
+}
+
+input{
+	font-size: 20px;
+	margin-bottom: 10px;
+}
+
 
 #loginForm{
 	display: none;
@@ -55,12 +56,4 @@ html,body{
 
 #signupForm{
 	display: block;
-}
-
-label{
-	font-size: 2em;
-}
-
-input{
-	font-size: 2em;
 }
